--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,6 @@ a {
   text-transform: uppercase;
   text-decoration: none;
   display: inline-block;
-  cursor: pointer;
   font-size: 16px;
   font-weight: 700;
   line-height: 1.3;
@@ -32,6 +31,9 @@ a {
 }
 a:hover {
   color: #2e2e2e;
+}
+a:hover:not([href]) {
+  color: #008993;
 }
 
 html,
@@ -327,9 +329,12 @@ button {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
+  margin-right: auto;
+  width: 140px;
+}
+.logo img {
+  width: 41px;
+  height: 41px;
 }
 .logo span {
   margin-left: 10px;
@@ -401,6 +406,7 @@ button {
 }
 .about-competition__image img {
   width: 100%;
+  max-height: 510px;
 }
 .about-competition__info {
   text-align: right;
@@ -563,6 +569,7 @@ button {
 }
 .application-competition__image img {
   width: 100%;
+  max-height: 305px;
 }
 .application-competition__idea {
   background-color: #f8a649;
@@ -575,6 +582,20 @@ button {
   .application-competition__idea .btn {
     max-width: none;
   }
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .contest-winners {
@@ -621,6 +642,8 @@ button {
 .membership__box img {
   cursor: pointer;
   margin-right: 5px;
+  width: 20px;
+  height: 25px;
 }
 
 .educational-program {
@@ -701,6 +724,7 @@ button {
 }
 .educational-program__image img {
   width: 100%;
+  max-height: 470px;
 }
 
 .representatives {
@@ -822,6 +846,156 @@ button {
 }
 .footer__text strong {
   font-weight: 700;
+}
+
+body.lock {
+  overflow: hidden;
+}
+
+.popup {
+  position: fixed;
+  z-index: 111;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.9)), to(rgba(0, 0, 0, 0.9)));
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));
+  opacity: 0;
+  visibility: hidden;
+  overflow-y: auto;
+  overflow-x: hidden;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.popup.open {
+  opacity: 1;
+  visibility: visible;
+}
+
+.popup.open .popup__content {
+  -webkit-transform: translate(0px, 0px);
+  transform: translate(0px, 0px);
+  opacity: 1;
+}
+
+.popup__body {
+  min-height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding: 50px;
+}
+@media (max-width: 768px) {
+  .popup__body {
+    padding: 20px;
+  }
+}
+
+.popup__content {
+  background-color: #EBEBEB;
+  color: #000000;
+  width: 100%;
+  max-width: 500px;
+  padding: 50px;
+  position: relative;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  opacity: 0;
+  -webkit-transform: translate(0, -100%);
+  transform: translate(0, -100%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+@media (max-width: 450px) {
+  .popup__content {
+    padding: 40px;
+  }
+}
+
+.form {
+  width: 100%;
+}
+.form__title {
+  font-size: 28px;
+  text-align: center;
+  margin-bottom: 25px;
+}
+@media (max-width: 450px) {
+  .form__title {
+    font-size: 20px;
+  }
+}
+.form__input {
+  display: block;
+  width: 100%;
+  max-width: 330px;
+  padding: 10px;
+  margin: 0 auto 10px;
+}
+.form__input:last-child {
+  margin-bottom: 0;
+}
+.form__btn {
+  margin: 30px auto 0;
+}
+
+.popup__close {
+  position: absolute;
+  z-index: 99;
+  top: 12px;
+  right: 25px;
+  cursor: pointer;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  padding: 15px;
+  background-color: transparent;
+}
+
+.popup__close:before,
+.popup__close:after {
+  content: '';
+  width: 24px;
+  height: 3px;
+  background-color: #3596F5;
+  position: fixed;
+  top: 26px;
+  right: 28px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.popup__close:before {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.popup__close:hover:before {
+  -webkit-transform: rotate(135deg);
+  transform: rotate(135deg);
+}
+
+.popup__close:after {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
+.popup__close:hover:after {
+  -webkit-transform: rotate(-135deg);
+  transform: rotate(-135deg);
+}
+
+.popup__close:hover:before,
+.popup__close:hover:after {
+  background-color: #ff0202;
 }
 
 /*# sourceMappingURL=style.css.map */
