--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -53,7 +53,6 @@ $fw_700: 700;
     text-transform: uppercase;
     text-decoration: none;
     display: inline-block;
-    cursor: pointer;
     font-size: $fz_16;
     font-weight: $fw_700;
     line-height: 1.3;
@@ -62,5 +61,8 @@ $fw_700: 700;
     transition-property: color;
     &:hover{
         color: $color_black;
+    }
+    &:hover:not([href]) {
+        color: #008993;
     }
 }
