--- a/scss/style.css
+++ b/scss/style.css
@@ -18,7 +18,6 @@ a {
   text-transform: uppercase;
   text-decoration: none;
   display: inline-block;
-  cursor: pointer;
   font-size: 16px;
   font-weight: 700;
   line-height: 1.3;
@@ -29,6 +28,8 @@ a {
   transition-property: color; }
   a:hover {
     color: #2e2e2e; }
+  a:hover:not([href]) {
+    color: #008993; }
 
 html,
 body {
@@ -155,7 +156,8 @@ button {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  border-radius: 2px; }
+  border-radius: 2px;
+  transition: 0.3s; }
 
 .header__burger::before,
 .header__burger:after {
@@ -167,7 +169,8 @@ button {
           transform: translateX(-50%);
   width: 25px;
   height: 2px;
-  background-color: #ffffff; }
+  background-color: #ffffff;
+  transition: 0.3s; }
 
 .header__burger::before {
   top: 30%; }
@@ -280,9 +283,11 @@ button {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto; }
+  margin-right: auto;
+  width: 140px; }
+  .logo img {
+    width: 41px;
+    height: 41px; }
   .logo span {
     margin-left: 10px;
     font-weight: 700;
@@ -337,7 +342,8 @@ button {
       .about-competition__image {
         margin-right: 0; } }
     .about-competition__image img {
-      width: 100%; }
+      width: 100%;
+      max-height: 510px; }
   .about-competition__info {
     text-align: right; }
     @media (max-width: 768px) {
@@ -457,7 +463,8 @@ button {
         padding: 20px 0;
         margin-bottom: 30px; } }
     .application-competition__image img {
-      width: 100%; }
+      width: 100%;
+      max-height: 305px; }
   .application-competition__idea {
     background-color: #f8a649; }
     .application-competition__idea .btn {
@@ -466,6 +473,19 @@ button {
       @media (max-width: 768px) {
         .application-competition__idea .btn {
           max-width: none; } }
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden; }
 
 .contest-winners {
   font-size: 20px;
@@ -500,7 +520,9 @@ button {
   text-align: center; }
   .membership__box img {
     cursor: pointer;
-    margin-right: 5px; }
+    margin-right: 5px;
+    width: 20px;
+    height: 25px; }
 
 .educational-program {
   margin-bottom: 100px; }
@@ -559,7 +581,8 @@ button {
     width: 100%;
     max-width: 585px; }
     .educational-program__image img {
-      width: 100%; }
+      width: 100%;
+      max-height: 470px; }
 
 .representatives {
   margin-bottom: 30px; }
@@ -654,5 +677,131 @@ button {
     margin-bottom: 0; }
   .footer__text strong {
     font-weight: 700; }
+
+body.lock {
+  overflow: hidden; }
+
+.popup {
+  position: fixed;
+  z-index: 111;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.9)), to(rgba(0, 0, 0, 0.9)));
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));
+  opacity: 0;
+  visibility: hidden;
+  overflow-y: auto;
+  overflow-x: hidden;
+  -webkit-transition: 0.5s;
+  transition: 0.5s; }
+
+.popup.open {
+  opacity: 1;
+  visibility: visible; }
+
+.popup.open .popup__content {
+  -webkit-transform: translate(0px, 0px);
+  transform: translate(0px, 0px);
+  opacity: 1; }
+
+.popup__body {
+  min-height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding: 50px; }
+  @media (max-width: 768px) {
+    .popup__body {
+      padding: 20px; } }
+
+.popup__content {
+  background-color: #EBEBEB;
+  color: #000000;
+  width: 100%;
+  max-width: 500px;
+  padding: 50px;
+  position: relative;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  opacity: 0;
+  -webkit-transform: translate(0, -100%);
+  transform: translate(0, -100%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+  @media (max-width: 450px) {
+    .popup__content {
+      padding: 40px; } }
+
+.form {
+  width: 100%; }
+  .form__title {
+    font-size: 28px;
+    text-align: center;
+    margin-bottom: 25px; }
+    @media (max-width: 450px) {
+      .form__title {
+        font-size: 20px; } }
+  .form__input {
+    display: block;
+    width: 100%;
+    max-width: 330px;
+    padding: 10px;
+    margin: 0 auto 10px; }
+    .form__input:last-child {
+      margin-bottom: 0; }
+  .form__btn {
+    margin: 30px auto 0; }
+
+.popup__close {
+  position: absolute;
+  z-index: 99;
+  top: 12px;
+  right: 25px;
+  cursor: pointer;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  padding: 15px;
+  background-color: transparent; }
+
+.popup__close:before,
+.popup__close:after {
+  content: '';
+  width: 24px;
+  height: 3px;
+  background-color: #3596F5;
+  position: fixed;
+  top: 26px;
+  right: 28px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s; }
+
+.popup__close:before {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg); }
+
+.popup__close:hover:before {
+  -webkit-transform: rotate(135deg);
+  transform: rotate(135deg); }
+
+.popup__close:after {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg); }
+
+.popup__close:hover:after {
+  -webkit-transform: rotate(-135deg);
+  transform: rotate(-135deg); }
+
+.popup__close:hover:before,
+.popup__close:hover:after {
+  background-color: #ff0202; }
 
 /*# sourceMappingURL=style.css.map */
