--- a/scss/style.scss
+++ b/scss/style.scss
@@ -23,7 +23,12 @@ a{
   .logo {
       display: flex;
       align-items: center;
-      flex: 1 1 auto;
+      margin-right: auto;
+      width: 140px;
+      & img {
+        width: 41px;
+        height: 41px;
+      }
       & span{
           margin-left: 10px;
           font-weight: $fw_700;
@@ -73,6 +78,7 @@ a{
         }
         & img {
             width: 100%;
+            max-height: 510px;
         }
     }
     &__info {
@@ -200,6 +206,7 @@ a{
             }
             & img {
                 width: 100%;
+                max-height: 305px;
             }
         }
         &__idea {
@@ -212,6 +219,19 @@ a{
                 }
             }
         }
+  }
+
+  .visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
   }
 
 
@@ -245,6 +265,8 @@ a{
     & img {
         cursor: pointer;
         margin-right: 5px;
+        width: 20px;
+        height: 25px;
     }
 }
 
@@ -306,6 +328,7 @@ a{
         max-width: 585px;
         & img {
             width: 100%;
+            max-height: 470px;
         }
     }
   }
@@ -398,8 +421,158 @@ a{
   
   
 
+body.lock {
+    overflow: hidden;
+}
+
+.popup {
+    position: fixed;
+    z-index: 111;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.9)), to(rgba(0, 0, 0, 0.9)));
+    background: -o-linear-gradient(bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));
+    opacity: 0;
+    visibility: hidden;
+    overflow-y: auto;
+    overflow-x: hidden;
+    -webkit-transition: 0.5s;
+    -o-transition: 0.5s;
+    transition: 0.5s;
+}
+
+.popup.open{
+    opacity: 1;
+    visibility: visible;
+}
+
+.popup.open .popup__content{
+    -webkit-transform: translate(0px, 0px);
+        -ms-transform: translate(0px, 0px);
+            transform: translate(0px, 0px);
+    opacity: 1;
+}
+
+.popup__body {
+    min-height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 50px;
+
+    @include breakpoint(md) {
+        padding: 20px;
+    }
+}
+
+.popup__content{
+    background-color: #EBEBEB;
+    color: #000000;
+    width: 100%;
+    max-width: 500px;
+    padding: 50px;
+    position: relative;
+    -webkit-transition: 0.5s;
+    -o-transition: 0.5s;
+    transition: 0.5s;
+    opacity: 0;
+    -webkit-transform: translate(0, -100%);
+        -ms-transform: translate(0, -100%);
+            transform: translate(0, -100%);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    @include breakpoint(xxs) {
+        padding: 40px;
+    }
+}
+
+.form {
+    width: 100%;
+    &__title {
+        font-size: 28px;
+        text-align: center;
+        margin-bottom: 25px;
+        @include breakpoint(xxs) {
+            font-size: 20px;
+        }
+    }
+    
+    &__input {
+        display: block;
+        width: 100%;
+        max-width: 330px;
+        padding: 10px;
+        margin: 0 auto 10px;
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
+    &__btn {
+        margin: 30px auto 0;
+    }
+  }
   
-  
-  
-  
-  
+
+.popup__close{
+    position: absolute;
+    z-index: 99;
+    top: 12px;
+    right: 25px;
+    cursor: pointer;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+    padding: 15px;
+    background-color: transparent;
+}
+
+.popup__close:before,
+.popup__close:after{
+    content: '';
+    width: 24px;
+    height: 3px;
+    background-color: #3596F5;
+    position: fixed;
+    top: 26px;
+    right: 28px;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+}
+
+.popup__close:before{
+    -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+            transform: rotate(45deg);
+}
+.popup__close:hover:before{
+    -webkit-transform: rotate(135deg);
+        -ms-transform: rotate(135deg);
+            transform: rotate(135deg);
+}
+
+.popup__close:after{
+    -webkit-transform: rotate(-45deg);
+        -ms-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+}
+.popup__close:hover:after{
+    -webkit-transform: rotate(-135deg);
+        -ms-transform: rotate(-135deg);
+            transform: rotate(-135deg);
+}
+
+.popup__close:hover:before,
+.popup__close:hover:after{
+    background-color: #ff0202;
+}
